feat: country setup
