# cmd/api/docs/swagger.yaml
@@ -1,5 +1,33 @@
 basePath: /
 definitions:
+  handlers.GetAllCountriesResponse:
+    properties:
+      id:
+        type: integer
+      iso3166_2_a1:
+        type: string
+      iso3166_2_a3:
+        type: string
+      name:
+        type: string
+      official_state_name:
+        type: string
+      tld:
+        type: string
+    type: object
+  handlers.InsertCountryRequest:
+    properties:
+      iso3166_2_a1:
+        type: string
+      iso3166_2_a3:
+        type: string
+      name:
+        type: string
+      official_state_name:
+        type: string
+      tld:
+        type: string
+    type: object
   handlers.LanguageTagBody:
     properties:
       iso_code_1:
@@ -73,6 +101,73 @@ info:
   title: UURL Admin API
   version: "1.0"
 paths:
+  /country:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all countries
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.GetAllCountriesResponse'
+            type: array
+      summary: Get all countries
+      tags:
+      - Country
+    post:
+      consumes:
+      - application/json
+      description: Creates a new country with the provided information
+      parameters:
+      - description: Country Data
+        in: body
+        name: country
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.InsertCountryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.GetAllCountriesResponse'
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+      summary: Create a new country
+      tags:
+      - Country
+  /country/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a country by the provided ID
+      parameters:
+      - description: Country ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.GetAllCountriesResponse'
+        "400":
+          description: Invalid item ID
+          schema:
+            type: string
+      summary: Get country by ID
+      tags:
+      - Country
   /language:
     get:
       description: Retrieve all language tags with their associated variants
@@ -91,7 +186,7 @@ paths:
             type: string
       summary: Get all language tags
       tags:
-      - LanguageTags
+      - Language tags
     post:
       consumes:
       - application/json
@@ -120,7 +215,7 @@ paths:
             type: string
       summary: Create a new language tag
       tags:
-      - LanguageTags
+      - Language tags
   /language-variant:
     get:
       consumes:
@@ -158,7 +253,7 @@ paths:
             type: string
       summary: Get paginated language tag variants
       tags:
-      - language-variant
+      - Language variants
     post:
       consumes:
       - application/json
@@ -187,7 +282,7 @@ paths:
             type: string
       summary: Create a new language tag variant
       tags:
-      - language-variant
+      - Language variants
   /language-variant/{id}:
     put:
       consumes:
@@ -226,7 +321,7 @@ paths:
             type: string
       summary: Update an existing language tag variant
       tags:
-      - language-variant
+      - Language variants
   /language/{id}:
     get:
       description: Retrieve a specific language tag and its variants by ID
@@ -253,5 +348,5 @@ paths:
             type: string
       summary: Get language tag by ID
       tags:
-      - LanguageTags
+      - Language tags
 swagger: "2.0"
