# internal/handlers/languageVariants.go
@@ -32,15 +32,16 @@ type PaginatedVariantsResponse struct {
 }
 
 // LanguageTagVariantHandler handles requests related to language tag variants
-// @Summary Handles language tag variants
-// @Description Get, create, or update language tag variants
-// @Tags language-variant
-// @Accept json
-// @Produce json
-// @Param id path int false "Variant ID" for PUT request
-// @Success 200 {object} LanguageTagVariantsResponse
-// @Failure 400 {string} string "Invalid request"
-// @Failure 405 {string} string "Method not allowed"
+//
+//	@Summary		Handles language tag variants
+//	@Description	Get, create, or update language tag variants
+//	@tags			Language variants
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		int	false	"Variant ID"	for	PUT	request
+//	@Success		200	{object}	LanguageTagVariantsResponse
+//	@Failure		400	{string}	string	"Invalid request"
+//	@Failure		405	{string}	string	"Method not allowed"
 func LanguageTagVariantHandler(w http.ResponseWriter, r *http.Request) {
 	switch r.Method {
 	case http.MethodGet:
@@ -64,18 +65,19 @@ func LanguageTagVariantHandler(w http.ResponseWriter, r *http.Request) {
 }
 
 // getPaginatedVariants returns paginated language tag variants
-// @Summary Get paginated language tag variants
-// @Description Get a list of language tag variants with pagination
-// @Tags language-variant
-// @Accept json
-// @Produce json
-// @Param languageTagId query int false "Language Tag ID"
-// @Param page_size query int false "Limit of items per page" default(10)
-// @Param page_token query int false "Offset for pagination" default(0)
-// @Success 200 {object} PaginatedVariantsResponse
-// @Failure 400 {string} string "Invalid languageTagId or page_token"
-// @Failure 500 {string} string "Database query error"
-// @Router /language-variant [get]
+//
+//	@Summary		Get paginated language tag variants
+//	@Description	Get a list of language tag variants with pagination
+//	@tags			Language variants
+//	@Accept			json
+//	@Produce		json
+//	@Param			languageTagId	query		int	false	"Language Tag ID"
+//	@Param			page_size		query		int	false	"Limit of items per page"	default(10)
+//	@Param			page_token		query		int	false	"Offset for pagination"		default(0)
+//	@Success		200				{object}	PaginatedVariantsResponse
+//	@Failure		400				{string}	string	"Invalid languageTagId or page_token"
+//	@Failure		500				{string}	string	"Database query error"
+//	@Router			/language-variant [get]
 func getPaginatedVariants(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	query := r.URL.Query()
@@ -152,16 +154,17 @@ func getPaginatedVariants(w http.ResponseWriter, r *http.Request) {
 }
 
 // postLanguageTagVariant handles creating a new language tag variant
-// @Summary Create a new language tag variant
-// @Description Create a new language tag variant
-// @Tags language-variant
-// @Accept json
-// @Produce json
-// @Param variant body LanguageTagVariantsRequest true "Language Tag Variant"
-// @Success 201 {object} LanguageTagVariantsResponse
-// @Failure 400 {string} string "Invalid request payload"
-// @Failure 500 {string} string "Database query error"
-// @Router /language-variant [post]
+//
+//	@Summary		Create a new language tag variant
+//	@Description	Create a new language tag variant
+//	@tags			Language variants
+//	@Accept			json
+//	@Produce		json
+//	@Param			variant	body		LanguageTagVariantsRequest	true	"Language Tag Variant"
+//	@Success		201		{object}	LanguageTagVariantsResponse
+//	@Failure		400		{string}	string	"Invalid request payload"
+//	@Failure		500		{string}	string	"Database query error"
+//	@Router			/language-variant [post]
 func postLanguageTagVariant(w http.ResponseWriter, r *http.Request) {
 	var req LanguageTagVariantsResponse
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -201,18 +204,19 @@ func postLanguageTagVariant(w http.ResponseWriter, r *http.Request) {
 }
 
 // updateLanguageTagVariant handles updating an existing language tag variant
-// @Summary Update an existing language tag variant
-// @Description Update an existing language tag variant
-// @Tags language-variant
-// @Accept json
-// @Produce json
-// @Param id path int true "Variant ID"
-// @Param variant body LanguageTagVariantsRequest true "Language Tag Variant"
-// @Success 200 {object} LanguageTagVariantsResponse
-// @Failure 400 {string} string "Invalid request payload"
-// @Failure 404 {string} string "Variant not found"
-// @Failure 500 {string} string "Database query error"
-// @Router /language-variant/{id} [put]
+//
+//	@Summary		Update an existing language tag variant
+//	@Description	Update an existing language tag variant
+//	@tags			Language variants
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		int							true	"Variant ID"
+//	@Param			variant	body		LanguageTagVariantsRequest	true	"Language Tag Variant"
+//	@Success		200		{object}	LanguageTagVariantsResponse
+//	@Failure		400		{string}	string	"Invalid request payload"
+//	@Failure		404		{string}	string	"Variant not found"
+//	@Failure		500		{string}	string	"Database query error"
+//	@Router			/language-variant/{id} [put]
 func updateLanguageTagVariant(w http.ResponseWriter, r *http.Request, LanguageTagVariantId int) {
 	var req LanguageTagVariantsResponse
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
